--- a/src/app/proto/proto.component.html
+++ b/src/app/proto/proto.component.html
@@ -9,4 +9,5 @@
         <button nz-button nzType="primary" nzDanger (click)="decode()">decode</button>
         <button nz-button nzType="primary" (click)="encode()">Encode</button>
     </div>
+    <p>{{Text | async}}</p>
 </div>
