--- a/src/app/proto/proto.component.html
+++ b/src/app/proto/proto.component.html
@@ -6,7 +6,7 @@
     
     <p></p>
     <div class="cont"> 
-        <button nz-button nzType="primary" nzDanger (click)="decode()">decode</button>
-        <button nz-button nzType="primary" (click)="encode()">Encode</button>
+        <button nz-button nzType="primary" nzDanger (click)="decode2()">decode</button>
+        <button nz-button nzType="primary" (click)="encode2()">Encode</button>
     </div>
 </div>
