--- a/src/app/proto/proto.component.html
+++ b/src/app/proto/proto.component.html
@@ -6,7 +6,8 @@
     
     <p></p>
     <div class="cont"> 
-        <button nz-button nzType="primary" nzDanger (click)="TestBroadCast()">decode</button>
-        <button nz-button nzType="primary" (click)="mix()">Encode</button>
+        <button nz-button nzType="primary" nzDanger (click)="TestBroadCast()">broadcast</button>
+        <button nz-button nzType="link" (click)="testRequestResponse()">request response</button>
+        <button nz-button nzType="primary" (click)="mix()">mix</button>
     </div>
 </div>
