added converting protofile and string manipulation

--- a/src/app/proto/proto.component.html
+++ b/src/app/proto/proto.component.html
@@ -5,11 +5,11 @@
     </div>
     
     <p></p>
-    <div class="cont"> 
+    <!--<div class="cont"> 
         <button nz-button nzType="primary" nzDanger (click)="TestBroadCast()">broadcast</button>
         <button nz-button nzType="link" (click)="testRequestResponse()">request response</button>
         <button nz-button nzType="primary" (click)="mix()">mix</button>
         <button nz-button nzType="link" (click)="encode2()">encode</button>
         <button nz-button nzType="primary" (click)="decode2()">decode</button>
-    </div>
+    </div>-->
 </div>
