fixed protowrapper conflict

--- a/src/app/proto/proto.component.html
+++ b/src/app/proto/proto.component.html
@@ -6,8 +6,9 @@
     
     <p></p>
     <div class="cont"> 
-        
+        <button nz-button nzType="primary" nzShape="round" (click)="openBroadcast()">subscribe to broadcast</button>
         <button nz-button nzType="link" (click)="testRequestResponse()">request response</button>
+        <button nz-button nzDanger="primary" nzShape="round" (click)="testMix()">mix</button>
 
     </div>
 </div>
